Fixed full screen viewer width on mobile

--- a/src/theme/mobile.scss
+++ b/src/theme/mobile.scss
@@ -199,7 +199,7 @@ $tablet-width: 960px;
 
   .full-page {
     .embed {
-      width: 100vw;
+      width: calc(100vw - 10px);
     }
   }
 
